redhat/ocp4/4.19/l4_switch_solution/02_sample_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-openshift
  namespace: l4-switch-demo
  labels:
    app: hello-openshift
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-openshift
  template:
    metadata:
      labels:
        app: hello-openshift
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - hello-openshift
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: hello-openshift
        image: openshift/hello-openshift
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8888
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hello-openshift
  namespace: l4-switch-demo
  labels:
    app: hello-openshift
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8888-tcp
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: hello-openshift
  type: ClusterIP
