redhat/ocp4/4.19/l4_switch_solution/03_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-openshift
  namespace: l4-switch-demo
  labels:
    app: hello-openshift
spec:
  to:
    kind: Service
    name: hello-openshift
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
